favorite brand section added

--- a/index.html
+++ b/index.html
@@ -20,5 +20,47 @@
         <button class="btn">Shop The Hotest Food</button>
       </div>
     </section>
+    <!-- Favorite Section -->
+    <section class="card_box">
+      <div class="title_container">
+        <p class="sub_title">Favorite Brands</p>
+        <h2 class="title">Your Favorite Brands Food Are Now On Sale</h2>
+      </div>
+      <div class="favorite_container">
+        <div class="card">
+          <div>
+            <img src="./assets/pizza.png" alt="Pizza" />
+          </div>
+          <button>Pizza Burg</button>
+          <h3>Up To 50% Off</h3>
+          <p>
+            Contrary to popular belief, Lorem Ipsum is not simply random text.
+          </p>
+        </div>
+        <div class="card">
+          <div>
+            <img src="./assets/biriyani.png" alt="Khacchi" />
+          </div>
+          <button>Kacchi Bhai</button>
+          <h3>Up To 50% Off</h3>
+          <p>
+            Contrary to popular belief, Lorem Ipsum is not simply random text.
+          </p>
+        </div>
+        <div class="card">
+          <div>
+            <img src="./assets/burger.png" alt="Burger" />
+          </div>
+          <div>
+            <button>Burger King</button>
+          </div>
+          <h3>Up To 50% Off</h3>
+          <p>
+            Contrary to popular belief, Lorem Ipsum is not simply random text.
+          </p>
+        </div>
+      </div>
+      <button class="btn">Watch All Sells</button>
+    </section>
   </body>
 </html>
